--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
 name: test
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest,windows-latest]
       fail-fast: true
     runs-on: ${{ matrix.os }}
     steps:
