--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         uses: './'
 
       - name: build test
-        uses: 'haxe -main Test -hl test.hl'
+        run: 'haxe -main Test -hl test.hl'
       - name: run test
-        uses: 'hl test.hl'
+        run: 'hl test.hl'
