--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@main
 
       - name: build Hashlink
-        uses: './action.yml'
+        uses: './'
 
       - name: build test
         run: 'haxe -main Test -hl test.hl'
