--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,10 @@
-name: "Install Hashlink"
+name: 'Install Hashlink'
+description: 'Install Hashlink'
+inputs:
+
 runs:
-  using: 'node12':
-  main: 'main.js': 
+  using: 'node12'
+  main: 'main.js'
+branding:
+  icon: 'download'
+  color: 'gray-dark'
