update test adding lix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,14 @@ jobs:
       fail-fast: true
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/setup-node@v1
+      - name: install lix
+        run: npm i lix -g
+      - name: run lix
+        run: npx lix download
       - uses: actions/checkout@v2
       - uses: ./
       - name: build test
-        run: haxe -main Test -hl test.hl
+        run: npx haxe -main Test -hl test.hl
       - name: run test
         run: hl test.hl
