--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
       - name: build test
-        run: npx haxe -main Test -hl test.hl
+        run: npx haxe test.hxml
       - name: run test
         run: hl test.hl
